# SunHitsIndoorPlant3DSimulator

./: .gitignore  HOMEASSISTANT_SETUP.md  check_plant_sun.py  generate_visualization.py  ha_config_example.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: default_config.json  measurement_config.json
data/: sample_sun_data.json
examples/: interactive_simulation.html  run_simulation.py
sun_plant_simulator/: __init__.py
sun_plant_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sun_plant_simulator/core/: __init__.py  coordinates.py  geometry.py  hit_test.py  models.py  ray_casting.py  sun_position.py
sun_plant_simulator/homeassistant/: __init__.py  service.py
sun_plant_simulator/simulator/: __init__.py  time_range.py
sun_plant_simulator/visualization/: __init__.py  interactive.py  scene_builder.py
tests/: __init__.py  test_config_parsing.py  test_geometry.py  test_hit_test.py  test_ray_casting.py  test_real_measurements.py  test_sanity.py
